--- a/src/app/dashboard/paramact/paramact.component.html
+++ b/src/app/dashboard/paramact/paramact.component.html
@@ -15,3 +15,6 @@
     </tr>
   </table>
 </div>
+<input [(ngModel)]="nom" type="text" name="" id="">
+<input [(ngModel)]="lieu" type="text">
+<button (click)="ADDact()">ajouter</button>
