--- a/src/app/dashboard/paramact/paramact.component.html
+++ b/src/app/dashboard/paramact/paramact.component.html
@@ -1,8 +1,16 @@
 <div class="center-container">
   <div class="search-container">
+    
     <input [(ngModel)]="searchProjectName" placeholder="Search by project name" class="search-input">
     <button class="search-button" (click)="searchActivite()">Search</button>
+      
   </div>
+  <div class="search-bar">
+    Nom Activité: <input [(ngModel)]="nom" type="text" name="nom" class="search-input" >
+    Lieu Activité: <input [(ngModel)]="lieu" type="text" name="lieu" class="search-input">
+    <button (click)="ADDact()" class="search-button">Ajouter</button>
+  </div>
+  
 
   <table class="event-table">
     <tr *ngFor="let activite of lesActivites" class="event-row">
@@ -10,11 +18,15 @@
         <h3 class="event-title">{{ activite.nom }}</h3>
         <p class="event-date">{{ activite.date | date }}</p>
         <p>{{ activite.id}}</p>
-        <input type="button" value="Delete" class="delete-button" (click)="onDeleteActivite(activite)">
+        <input type="button" value="Supprimer" class="delete-button" (click)="onDeleteActivite(activite)">
+        <input type="button" value="Liste Membres" class="sectionheader" (click)="voirMembre()">
+        <div *ngFor="let membres of Membres">
+          Nom : {{membres.nom}} -- Prénom : {{membres.prenom}} -- Adresse : {{membres.adresse}}
+        </div>
       </td>
     </tr>
+    
   </table>
 </div>
-<input [(ngModel)]="nom" type="text" name="" id="">
-<input [(ngModel)]="lieu" type="text">
-<button (click)="ADDact()">ajouter</button>
+
+
