--- a/src/app/nav/listeactivite/listeactivite.component.html
+++ b/src/app/nav/listeactivite/listeactivite.component.html
@@ -1,6 +1,6 @@
 <app-menu></app-menu>
 <ul>
-    <li *ngFor="let A of lesActivites" style="list-style-type: none;">
+    <li *ngFor="let A of lesActivites" style="list-style-type: none;align-items: stretch;">
        <div class="box">
          <img [src]="A.image" alt="{{A.nom}}" class="img">
          <h3 class="title">{{A.nom}}</h3>
