--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="button-group" >
     <ul class="menu" > 
         <h1 style="background-color: #F2385A; color: white;width: 100%; height: 50px;text-align: center;">Espace d'administration </h1>
-        <a style="margin-left: 40%;"><input type="button" class="centered-inputnk" value="Activités" routerLink="/dashboard/paramact"></a>
+        <a style="margin-left: 40%;"><input type="button" class="centered-inputnk" value="Activités" routerLink="/dashboard/paramact/listeadmin"></a>
         <a ><input type="button" class="centered-inputnk" value="Profile Admin" routerLink="/dashboard/profile"></a>
         <button (click)="onDisconnect()" class="dec-button">Deconnexion</button>
       </ul>
