--- a/src/app/nav/listeactivite/listeactivite.component.css
+++ b/src/app/nav/listeactivite/listeactivite.component.css
@@ -1,30 +1,69 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,700);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
-
-.box {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-
-    
-   }
-   
-   .img {
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+  }
+  
+  .card {
+    display: flex;
+    flex-direction: column;
     max-width: 100%;
-    height: auto;
-   }
-   
-   .title {
-    font-size: 18px;
-    margin: 5px 0;
-    font-family: Oswald ,sans-serif;
-   }
-   
-   .date {
-    font-size: 14px;
-    color: #777;
-    font-family: Oswald ,sans-serif;
-   }
+    background-color: #fff;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 1rem;
+    height: 400px; /* Adjust the height as needed */
+    width: 300px;
+    position: relative;
+  }
+  
+  .card-img {
+    padding-bottom: 70%; 
+    position: relative;
+  }
+  
+  .card-img img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+ 
+  }
+  
+  .card-body {
+    padding: 15px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center; 
+  }
+  
+  .event-name {
+    font-size: 1.25rem;
+    line-height: 1.33;
+    font-weight: 700;
+    margin-bottom: 5px;
+  }
+  
+  .event-date {
+    margin-bottom: 10px;
+    font-size: 1.25rem;
+    line-height: 1;
+    font-weight: 700;
+  }
+  
+  .info-button {
+    background-color: #F2385A;
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+    cursor: pointer;
+    align-self: center; /* Center the button horizontally */
+    transition: background-color 0.3s ease;
+  }
+  
+  .info-button:hover {
+    background-color: #7b182a;
+  }
+  
