--- a/src/app/nav/accueil/accueil.component.css
+++ b/src/app/nav/accueil/accueil.component.css
@@ -1,12 +1,25 @@
-.banner img{
+.banner img {
     margin-top: 50px;
     width: 100%;
     max-height: 100vh;
-}
-.dis {
-    position: relative;
-    top: 80px;
+  }
+  
+  .dis {
     padding: 20px;
     text-align: center;
-    font-family: Oswald ,sans-serif;
-}
+    font-family: Oswald, sans-serif;
+    margin-bottom:60px;
+  }
+  
+  .joke {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgb(114,21,21);
+    color: white;
+    text-align: center;
+    padding: 5px;
+    font-family: Oswald, sans-serif;
+  }
+  
