--- a/src/app/nav/contact/contact.component.css
+++ b/src/app/nav/contact/contact.component.css
@@ -28,7 +28,7 @@ z-index: -1;
   padding: 1em;
 }
 #contact h1 {
-background: #F2385A;
+background: red;
 font-family: Oswald ,sans-serif;
 font-size: 1.75em;
 padding: 0.6em 0 0.6em 0.4em;
@@ -37,9 +37,9 @@ text-shadow: 0 0.06em 0 #424242;
 position: relative;
 }
 .contactbutton {
-background: #F2385A;
--webkit-box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
-box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
+background: red;
+-webkit-box-shadow: 1px 1px 0 0 rgb(114, 21, 21),2px 2px 0 0 rgb(114,21,21),3px 3px 0 0 rgb(114,21,21);
+box-shadow: 1px 1px 0 0 rgb(114,21,21),2px 2px 0 0 rgb(114,21,21),3px 3px 0 0 rgb(114,21,21);
 text-align: center;
 display: block;
 width: 100%;
@@ -49,8 +49,8 @@ margin-bottom: 2px;
 cursor: pointer;
 }
 .contactbutton:hover {
--webkit-box-shadow: 1px 1px 0 0 #832032,0px 0px 0 0 #832032,0px 0px 0 0 #832032;
-box-shadow: 1px 1px 0 0 #832032,0px 0px 0 0 #832032,0px 0px 0 0 #832032;
+-webkit-box-shadow: 1px 1px 0 0 rgb(114,21,21),0px 0px 0 0 rgb(114,21,21),0px 0px 0 0 rgb(114,21,21);
+box-shadow: 1px 1px 0 0 rgb(114,21,21),0px 0px 0 0 rgb(114,21,21),0px 0px 0 0 rgb(114,21,21);
 margin-top: 22px;
 margin-left: 2px;
 margin-bottom: 0px;
@@ -60,7 +60,7 @@ margin-top: 11px;
 font-size: 15px;
 display: inline-block;
 border-top: 2em solid transparent;
-border-left: 2.6em solid #832032;
+border-left: 2.6em solid rgb(114,21,21);
 height: 0;
 width: 0;
 position: relative;
@@ -71,7 +71,7 @@ top: -2.5em;
 left: -2.95em;
 display: block;
 position: absolute;
-border-top: 1.2em solid #832032;
+border-top: 1.2em solid rgb(114,21,21);
 border-left: 1.6em solid transparent;
 border-right: 1.6em solid transparent;
 border-bottom: 1em solid transparent;
@@ -82,7 +82,7 @@ display: block;
 content: "";
 position: absolute;
 border-top: 2em solid transparent;
-border-right: 2.6em solid #832032;
+border-right: 2.6em solid rgb(114,21,21);
 height: 0;
 width: 0;
 left: -2.18em;
@@ -155,7 +155,7 @@ position: absolute;
 left: 0;
 top: 0;
 height: 100%;
-background: #F2385A;
+background: red;
 color: white;
 font-family: Oswald ,sans-serif;
 box-sizing: border-box;
@@ -206,13 +206,13 @@ height: 50px;
 margin-top: 1em;
 margin-bottom: 6px;
 cursor: pointer;
-background: #F2385A;
+background: red;
 color: white;
 font-family: Oswald ,sans-serif;
 font-size: 1em;
 border: none;
--webkit-box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
-box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
+-webkit-box-shadow: 1px 1px 0 0 rgb(114,21,21),2px 2px 0 0 rgb(114,21,21),3px 3px 0 0 rgb(114,21,21);
+box-shadow: 1px 1px 0 0 rgb(114,21,21),2px 2px 0 0 rgb(114,21,21),3px 3px 0 0 rgb(114,21,21);
   -webkit-transition: all 250ms ease;
 -moz-transition: all 250ms ease;
 -ms-transition: all 250ms ease;
@@ -220,8 +220,8 @@ box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
 transition: all 250ms ease;
 }
 .submit_wrapper input:hover {
--webkit-box-shadow: 1px 1px 0 0 #832032,0px 0px 0 0 #832032,0px 0px 0 0 #832032;
-box-shadow: 1px 1px 0 0 #832032,0px 0px 0 0 #832032,0px 0px 0 0 #832032;
+-webkit-box-shadow: 1px 1px 0 0 rgb(114,21,21),0px 0px 0 0 rgb(114,21,21),0px 0px 0 0 rgb(114,21,21);
+box-shadow: 1px 1px 0 0 rgb(114,21,21),0px 0px 0 0 rgb(114,21,21),0px 0px 0 0 rgb(114,21,21);
 margin-top: 22px;
 margin-left: 2px;
 margin-bottom: 0px;
