--- a/src/app/nav/listeactivite/listeactivite.component.css
+++ b/src/app/nav/listeactivite/listeactivite.component.css
@@ -13,7 +13,7 @@
     border-radius: 10px;
     overflow: hidden;
     margin: 1rem;
-    height: 400px; /* Adjust the height as needed */
+    height: 400px; 
     width: 300px;
     position: relative;
   }
@@ -54,16 +54,82 @@
   }
   
   .info-button {
-    background-color: #F2385A;
+    background-color: red;
     color: #fff;
     padding: 8px 12px;
     border: none;
     cursor: pointer;
-    align-self: center; /* Center the button horizontally */
+    align-self: center; 
+    border-radius: 5px;
     transition: background-color 0.3s ease;
   }
   
   .info-button:hover {
-    background-color: #7b182a;
+    background-color: rgb(114,21,21);
   }
+
+
+.search-input {
+  padding: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 250px;
+  font-family: Oswald, sans-serif;
+}
+
+input.ng-valid {
+  border-left: 5px solid green;
+  border-color: green;
+}
+
+input.ng-invalid {
+  border-left: 5px solid red;
+  border-color: red;
+}
+
+
+.search-container {
+  margin-bottom: 20px;
+}
+
+
+.search-input {
+  padding: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 250px;
+  font-family: Oswald, sans-serif;
+}
+
+input.ng-valid {
+  border-left: 5px solid green;
+  border-color: green;
+}
+
+input.ng-invalid {
+  border-left: 5px solid red;
+  border-color: red;
+}
+
+.search-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 5px;
+  margin-left: 5px;
+  font-family: Oswald, sans-serif;
+}
+
+.search-button:hover {
+  background-color: rgb(114,21,21);
+}
+
   
