--- a/src/app/nav/contact/contact.component.html
+++ b/src/app/nav/contact/contact.component.html
@@ -6,12 +6,12 @@
         
             <label for="checkcontact" class="contactbutton"><div class="mail"></div></label><input id="checkcontact" type="checkbox">
     
-            <form action="" method="post" class="contactform">
-                <p class="input_wrapper"><input type="text" name="contact_nom"  id ="contact_nom"><label for="contact_nom" >NAME</label></p>
-                <p class="input_wrapper"><input type="text" name="contact_email"  id ="contact_email" #adr><label for="contact_email">EMAIL</label></p>
-                <p class="input_wrapper"><input type="text" name="contact_sujet"  id ="contact_sujet" #sub><label for="contact_sujet" >SUBJECT</label></p>
-                <p class="textarea_wrapper"><textarea name="contact_message" id="contact_message" #mess></textarea></p>
-                <p class="submit_wrapper"><input type="submit" value="ENVOYER" (click)="onMessage(adr.value,sub.value,mess.value)"></p>			
+            <form action="" method="post" class="contactform" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+                <p class="input_wrapper"><input type="text" name="contact_nom"  id ="contact_nom" formControlName="nom"><label for="contact_nom" >NAME</label></p>
+                <p class="input_wrapper"><input type="text" name="contact_email"  id ="contact_email" formControlName="email"><label for="contact_email">EMAIL</label></p>
+                <p class="input_wrapper"><input type="text" name="contact_sujet"  id ="contact_sujet" formControlName="subject" ><label for="contact_sujet" >SUBJECT</label></p>
+                <p class="textarea_wrapper"><textarea formControlName="message" name="contact_message" id="contact_message" ></textarea></p>
+                <p class="submit_wrapper"><input type="submit" value="ENVOYER" ></p>			
             </form>
     </article>
 </section>
