--- a/src/app/nav/menu/menu.component.html
+++ b/src/app/nav/menu/menu.component.html
@@ -4,7 +4,7 @@
     <a ><input type="button" class="centered-inputnk" value="Accueil" routerLink="/accueil"></a>
     <a ><input type="button" class="centered-inputnk" value="Activités" routerLink="/listeactivite"></a>
     <a ><input type="button" class="centered-inputnk" value="Contact" routerLink="/contact"></a>
-    <a ><input type="button" class="centered-inputnk" value="Se connecter" routerLink="/login"></a>
+    <a ><input type="button" class="centered-inputnk" value="Se Connecter" routerLink="/login"></a>
     <a ><input type="button" class="centered-inputnk" value="About us" routerLink="/aboutus"></a>
   </ul>
   <div class="separation"></div>
