--- a/src/app/nav/aboutus/aboutus.component.css
+++ b/src/app/nav/aboutus/aboutus.component.css
@@ -23,8 +23,8 @@ body {
 
 .about-image {
   width: 100%;
-  height: 200px; 
-  object-fit: cover; 
+  height: 200px; /* Adjust the height as needed */
+  object-fit: cover; /* Maintain aspect ratio and cover the container */
   border-radius: 8px;
   margin-bottom: 10px;
 }
