--- a/src/app/nav/accueil/accueil.component.css
+++ b/src/app/nav/accueil/accueil.component.css
@@ -1,8 +1,31 @@
-.banner img {
-    margin-top: 50px;
-    width: 100%;
-    max-height: 100vh;
-  }
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  background-color: #fff;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
+  border-radius: 25px;
+  overflow: hidden;
+  margin: 0rem;
+  height: 500px;
+  width: 300px;
+  position: relative;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
   
   .dis {
     padding: 20px;
