--- a/src/app/nav/login/login.component.html
+++ b/src/app/nav/login/login.component.html
@@ -1,16 +1,16 @@
 <div class="admin">
-    <h2>Espace d'administration</h2>
+    <h2 style="background-color: red;color: white;">Espace d'administration</h2>
     <form [formGroup]="adminForm" id="admin-form">
       <div class="groupe">
         <p class="input_wrapper">
-          <input type="text" formControlName="username" >
+          <input type="text" formControlName="username" class="form-control">
           <label for="username"><i class="fas fa-user"></i></label>
         </p>
       </div>
   
       <div class="groupe">
         <p class="input_wrapper">
-          <input type="password" formControlName="pass">
+          <input type="password" formControlName="pass" class="form-control">
           <label for="password"><i class="fas fa-lock"></i></label>
         </p>
       </div>
